--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@xuffux/vending-machine",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "vending-machine coding exercise",
-  "main": "index.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "files": [
+    "/build"
+  ],
   "dependencies": {
     "joi": "^17.4.2",
     "typescript": "^4.4.3",
