--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "skipLibCheck": true,
     "outDir": "./build"
   },
-  "exclude": ["node_modules", "./build"]
+  "include": ["src"],
+  "exclude": ["node_modules", "./build", "./.coverage"]
 }
