--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "newLine": "lf",
     "noErrorTruncation": true,
     "skipLibCheck": true,
-    "outDir": "./build"
+    "outDir": "./build",
+    "rootDir": "./src"
   },
   "include": ["src"],
   "exclude": ["node_modules", "./build", "./.coverage"]
