--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "files": [
     "/build"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fahyik/vending-machine.git"
+  },
+  "homepage": "https://github.com/fahyik/vending-machine#readme",
   "dependencies": {
     "joi": "^17.4.2",
     "typescript": "^4.4.3",
