--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuffux/vending-machine",
-  "version": "1.0.3",
+  "version": "1.0.4-beta.0",
   "description": "vending-machine coding exercise",
   "main": "build/index.js",
   "types": "build/index.d.ts",
