--- a/package.json
+++ b/package.json
@@ -13,24 +13,20 @@
   },
   "homepage": "https://github.com/fahyik/vending-machine#readme",
   "dependencies": {
-    "joi": "^17.4.2",
-    "typescript": "^4.4.3",
+    "joi": "^17.6.0",
+    "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "@types/uuid": "^8.3.1",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6"
+    "@types/jest": "^27.4.1",
+    "@types/uuid": "^8.3.4",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3"
   },
   "scripts": {
     "test": "tsc -b && jest --coverage true",
     "tsc": "tsc -b",
     "clear": "rm -rf ./.jest-cache ./.coverage ./build ./tsconfig.tsbuildinfo"
   },
-  "author": "fahyik",
-  "volta": {
-    "node": "14.18.0",
-    "npm": "7.24.1"
-  }
+  "author": "fahyik"
 }
